# lucky-x-server

./: .gitignore  Cargo.toml  Makefile  README.md  cpn.py  docker-compose.yaml  otel-collector-config-minimal.yaml  otel-collector-config.yaml  test2.py
luckyapi/: Cargo.toml  clippy.toml  deny.toml  rust-toolchain.toml  typos.toml
luckyapi/benches/: benchmark.rs
luckyapi/src/: lib.rs  main.rs
luckyapi/src/common/: error.rs  response.rs
luckyapi/src/db/: mod.rs
luckyapi/src/db/sqlx_dao/: archive_process_dao.rs  manager.rs  mod.rs
luckyapi/src/handlers/: health_handler.rs  mod.rs  zip_handler.rs
luckyapi/src/models/archive/: mod.rs  process.rs
luckyapi/src/util/: cp.rs  mod.rs  oss.rs
luckylib/: Cargo.toml
luckylib/src/: lib.rs  oltp_config.rs  tcp.rs  tracing_config.rs
scripts/: archive_process.sql  temp.txt
