[package]
name = "luckyapi"
version = "0.1.0"
edition = "2021"
resolver = "2"
authors = ["csh0101csh0101@proton.me"]
license = "MIT-0"
build = "build.rs"
description = "a good server named x"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "0.4.0", features = ["async_futures", "async_tokio"] }
tokio = { version = "1.36.0", features = ["full", "tracing"] }
[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
axum-macros = "0.4.1"
tokio = { version = "1.36.0", features = ["full", "tracing"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
clap = { version = "4.5.4", features = ["derive", "cargo"] }
anyhow = { version = "1.0.81" }
thiserror = { version = "1.0.58" }
shadow-rs = { version = "0.27.1" }
luckylib = { path = "../luckylib" }
tracing = "0.1.40"
zip = "0.6.0"
gjson = "0.8"
walkdir = "2.3"
html-escape = "0.2.13"
regex = "1"
md5 = "0.7.0"

[build-dependencies]
shadow-rs = { version = "0.27.1" }

[[bench]]
name = "benchmark"
harness = false
